# M3R-SLAM

./: .gitignore  .gitmodules  README.md  SCRIPT_Bildordner_zusammenfuehren.py  SCRIPT_Glomap_on_Images.py  SCRIPT_MAIN_Pipeline.py  SCRIPT_run_slam_spacing50.py  local_install.md  main.py  pyproject.toml  setup.py  vons_manual_m3rslam.md
CS-Notes/: KeyframeSelectionAndMapping.md  MASt3R-SLAM-Keyframe-and-Matching.md
mast3r_slam/: __init__.py  dataloader.py  evaluate.py  frame.py  lietorch_cpu.py  multiprocess_utils.py  rerun_viz.py  visualization.py  visualization_utils.py
mast3r_slam/backend/src/: gn_kernels.cu  matching_kernels.cu
