[build-system]
requires = ["setuptools==70.0.0", "torch"]
build-backend = "setuptools.build_meta"

[project]
name = "MAST3R-SLAM"
version = "0.0.1"
dependencies = [
    "numpy>=2.0.0",
    "einops",
    "pyrealsense2",
    "evo",
    "natsort",
    # "torchcodec==0.1",
    "plyfile",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["mast3r_slam"]
namespaces = false
